# grubble

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  package-lock.json  package.json  test-with-markdown.sh
.github/prompts/: sc.prompt.md
.github/workflows/: ci.yml  publish.yml  release.yml  version.yml
lib/: analyser.js  config.js  git.js
scripts/: validate-release.sh
scripts/hooks/: pre-commit
src/: changelog.rs  config.rs  git.rs  main.rs  strategy.rs  versioner.rs
src/strategy/: rust.rs
test/: analyser.test.js  config.test.js  versioner.test.js
test/fixtures/: package.json
