[package]
name = "grubble"
version = "4.4.3"
edition = "2021"
authors = ["David Garvey"]
description = "Automatic semantic versioning based on conventional commits, optimized for AI-generated commit messages"
license = "MIT"
repository = "https://github.com/davegarvey/grubble"
homepage = "https://github.com/davegarvey/grubble"
documentation = "https://github.com/davegarvey/grubble#readme"
readme = "README.md"
keywords = ["semver", "versioning", "conventional-commits", "automation", "ci-cd"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "grubble"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
